# bugzilla-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
.github/: README.md  TOPICS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
bugzilla_mcp/: __init__.py
bugzilla_mcp/middleware/: __init__.py  validate_headers.py
bugzilla_mcp/tools/: __init__.py  bugzilla.py
bugzilla_mcp/utils/: __init__.py  bugzilla.py
docs/: app.config.ts  nuxt.config.ts  package.json  vercel.json
docs/content/: index.md
docs/content/1.getting-started/: 2.introduction.md  3.installation.md  4.configuration.md  5.usage.md  6.security.md
tests/: __init__.py  conftest.py
tests/test_middleware/: __init__.py  test_validate_headers.py
tests/test_tools/: __init__.py  test_bugzilla.py
tests/test_utils/: __init__.py  test_bugzilla_client.py
